# slack_down

./: LICENSE  pyproject.toml  test_single.py  test_slack.py
slack_md/: __init__.py  emojis.py
