[tool.poetry]
name = "slack_down"
version = "0.1.0"
description = ""
authors = ["Brice Maron <bmaron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
markdown-it-py = "^1.1.0"
pytest = "^6.2.4"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']


[tool.isort]
line_length=120
skip_gitignore=true
profile="black"